# LaneDetector

./: .gitattributes  README.md
LaneDetectorOpenCV/: CMakeLists.txt  README.md  main.cpp
LaneNetwithTF2/: README.md  main.py  model.py  test.py
LaneNetwithTF2/Model/: LaneNet.h5
LaneNetwithTF2/image/: train.txt  val.txt
